[gd_scene load_steps=7 format=3 uid="uid://7qbwaqmmp36e"]

[ext_resource type="Texture2D" uid="uid://d3to8x5t7ht2r" path="res://assets/sprites/theRoyalGuy.png" id="1_f5ka0"]
[ext_resource type="Script" path="res://start_up_screen/FatKingGuy.gd" id="2_1ttir"]
[ext_resource type="LabelSettings" uid="uid://bv36tfegyqvta" path="res://fonts/small_black_font.tres" id="3_s53xt"]

[sub_resource type="Animation" id="Animation_4rpgb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8tf5s"]
resource_name = "fade in"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1.93187),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwev3"]
_data = {
"RESET": SubResource("Animation_4rpgb"),
"fade in": SubResource("Animation_8tf5s")
}

[node name="StartUpScreen" type="Node2D"]

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(480, 900)
offset_right = 480.0
offset_bottom = 900.0

[node name="FatKingGuy" type="CharacterBody2D" parent="."]
script = ExtResource("2_1ttir")

[node name="Sprite2D" type="Sprite2D" parent="FatKingGuy"]
texture = ExtResource("1_f5ka0")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(480, 900)
offset_right = 480.0
offset_bottom = 900.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwev3")
}
autoplay = "fade in"

[node name="kingEndTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="name_control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="name" type="Label" parent="name_control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 790.0
offset_right = 142.0
offset_bottom = 815.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "FLY v1.00"
label_settings = ExtResource("3_s53xt")
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="FatKingGuy" method="_on_animation_finished"]
[connection signal="timeout" from="kingEndTimer" to="FatKingGuy" method="_on_timer_timeout"]
